# tinymarkdownnotes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  howtodeploy.txt  pyproject.toml  pytest.ini
.github/workflows/: test.yml
static/: style.css
templates/: conflict.html  index.html  init_note.md  note.html
tests/: conftest.py  test_app.py  test_checkbox_e2e.py
