[project]
name = "tinymarkdownnotes"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "playwright>=1.56.0",
    "pytest>=9.0.1",
    "pytest-flask>=1.3.0",
    "pytest-playwright>=0.7.2",
]
